# dewey

./: Cargo.toml  README.md  rag.yaml
src/: chunk.rs  config.rs  embed.rs  index.rs  main.rs  search.rs
