[package]
name = "dewey"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
vector = { path = "../opendata/vector", package = "opendata-vector" }
common = { path = "../opendata/common", package = "opendata-common" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
glob = "0.3"
